# ServiceFramework

./: .gitignore
Emulators/Communication/: Socket.cpp  Socket.h
Scripts/: BuildServiceFramework.sh  CleanServiceFrameworkBuild.sh  StartServiceFramework.sh
SourceCode/: CMakeLists.txt
SourceCode/Communication/: Buffer.cpp  Buffer.h  Client.cpp  Client.h  CommunicationBase.cpp  CommunicationBase.h  Connection.h  Reciever.cpp  Reciever.h  Server.cpp  Server.h  Transmitter.cpp  Transmitter.h
SourceCode/Communication/Connection/: Connection.cpp  Connection.h  Socket.h
SourceCode/Communication/Message/: Message.cpp  Message.h  Payload.cpp  Payload.h  TextMessage.cpp  TextMessage.h
SourceCode/Logger/: Logger.cpp  Logger.h
SourceCode/Utilities/Logger/: Logger.cpp  Logger.h
SourceCode/Utilities/Xml/: XmlFile.cpp  XmlFile.h
Testing/: CMakeLists.txt  main.cpp
Testing/data/: ServerConfig.xml
